--- a/DOM/one.html
+++ b/DOM/one.html
@@ -14,14 +14,24 @@
     </div>
 </body>
 <script>
-   const parent=document.querySelector(".parent")
-//    console.log(parent);
-//    console.log(parent.children)
-for (let index = 0; index <parent.children.length; index++) {
-    console.log(parent.children[index].innerHTML);
+const parent = document.querySelector('.parent')
+    // console.log(parent);
+    // console.log(parent.children);
+    // console.log(parent.children[1].innerHTML); // PARENT ka first element print kar dega
 
-  console.log(document.querySelector("NODES",parent.childNodes))
-    
-}
+    // for (let i = 0; i < parent.children.length; i++) {
+    //      console.log(parent.children[i].innerHTML);
+        
+    // }
+    parent.children[1].style.color = "orange"
+    // console.log(parent.firstElementChild);
+    // console.log(parent.lastElementChild);
+
+    const dayOne = document.querySelector('.day')
+    // console.log(dayOne);
+    // console.log(dayOne.parentElement);
+    //  console.log(dayOne.nextElementSibling);
+
+    // console.log("NODES: ", parent.childNodes);
 </script>
 </html>
